<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tomo_rviz</name>
  <version>2.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iric.do@emagegroup.com">iric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>libqt5x11extras5-dev</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <!-- <depend>tomo_comm</depend> -->
  <!-- <depend>tomo_camera</depend> -->

  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
