<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tomo_ui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iric.do@emagegroup.com">iric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>

  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <depend>tomo_action</depend>
  <depend>tomo_msgs</depend>
  <depend>tomo_comm</depend>
  <depend>tomo_camera</depend>
  <depend>tomo_rviz</depend>
  <depend>rviz_visual_tools</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>


  <exec_depend>ros2launch</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>